eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: digital-bank-api-service
spec:
  selector:
    app: digital-bank-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-server
      name: http-service
    - protocol: TCP
      port: 90
      targetPort: grpc-server
      name: grpc-service
  type: ClusterIP

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: digital-bank-api-service
#spec:
#  selector:
#    app: digital-bank-api
#  ports:
#    - protocol: TCP
#      #                  the port is from the service.yaml file
#      port: 80
#      targetPort: 8080
#  type: ClusterIP
