eks/ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: IngressClass
#metadata:
#  name: nginx
#spec:
#  controller: k8s.io/ingress-nginx
#
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: digital-bank-ingress
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: "api.digital-bank.org"
#      http:
#        paths:
#          - pathType: Prefix
#            path: "/"
#            backend:
#              service:
#                name: digital-bank-api-service
#                port:
#                  number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digital-bank-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: "api.digitalbanktoday.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: digital-bank-api-service
                port:
                  number: 80

  tls:
    - hosts:
        - api.digitalbanktoday.com
      secretName: digital-bank-api-cert
